--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://github.com/ekachnwa/best",
+  "homepage": "https://ekachnwa.github.io/best/",
   "": "",
   "private": true,
   "version": "0.0.0",
@@ -11,7 +11,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh pages -d dist"
+    "deploy": "gh-pages -d dist"
     
   },
   "dependencies": {
